Ensure visually hidden text doesn't get crushed
see: https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe#.36jsok26n

--- a/utils/main.scss
+++ b/utils/main.scss
@@ -41,6 +41,7 @@
 		padding: 0;
 		width: 1px;
 		height: 1px;
+		white-space: nowrap;
 	}
 
 	.no-js .n-util-hide-no-js,
